--- a/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanAwardCrit.mdx
+++ b/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanAwardCrit.mdx
@@ -1,1 +1,18 @@
-Nothing here yet... Coming Soon!
+# Team Sustainability Award & Criteria:
+The Team Sustainability Award is awarded at FRC events to recognize “a team which has developed sustainable practices to have a positive environmental impact and achieve long-tem continuity.” 
+
+# What is the Team Sustainability Award?
+The Team Sustainability award is multifaceted in the fact that it addresses the many aspects of team sustainability. The award criteria include a team’s ability to maintain environmental sustainability, financial sustainability, team organization, and sustainable numbers of mentors and students.
+
+Team 201 strives to meet these standards and become sustainable in as many ways as we can, using our new initiatives - such as our G201 projects and creation of our Operations Manual - to operate as a cohesive unit. To be a competitively sustainable team, we recognize our team’s impact on the environment, and use a SWOT analysis, alumni surveys, and realistic goal-setting to identify risks and ways we can improve. 
+
+We maintain a robust student pipeline through our STEM outreach to younger students in the district, and actively engage our agents, mentors, and sponsors. 
+
+Environmentally, our G201 initiative focuses assessing and reducing our eco footprint through a variety of projects that are made available to the FIRST community through our YouTube G201 library. 
+
+Overall, we understand that sustainability is a whole-team mission and a keystone value in FIRST robotics.
+
+# What Can Your Team Do?
+Your FRC team can become competitively sustainable by calculating your own eco footprints and identifying areas needing improvements / discussion to support eco-friendly practices. You can outline plans to mitigate risks, such as sponsor loss, mentor loss, or loss of agent participation. You can even tailor to additional team growths and how you maintain a consistent flow of new students onto the team through feeder teams and such.
+
+You know what the cool thing is? **All** of the examples above can be mentioned and expanded on in a summary Business Plan, detailling your team's overall structure and sustainability. The FEDS, having created an award-winning Business Plan, recommend creating a Business Plan for your own team and other documentation to help keep track of your team's work, especially if you plan on being competitive for awards such as the **Team Sustainability**, **EI** (Engineering & Inspiration), or the **FIRST Impact** award, all of which covered in separate pages of the FEDS Operations Manual.
