--- a/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanExAndTemp.mdx
+++ b/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanExAndTemp.mdx
@@ -1,1 +1,12 @@
-Nothing here yet... Coming Soon!
+# Business Plan Example & Template:
+	In this section of the FEDS Operations Manual, you will find a template of the FEDS 201 Business Plan! Feel free to use our example below as a guide to building a successful Business Plan for your team.
+
+# The FEDS' 2024 Business Plan:
+    Below, we have linked our Business Plan from the 2024 CRESCENDO season. Feel free to check it out and see if it may help your team start up your own Business Plan!
+
+https://docs.google.com/document/d/1pEDZX_-3c0E3DIKIkfEAKqiYKVe7i0xb/edit
+
+# Template Business Plan:
+    Check out this document that showcases a template for your team's Business Plan based off of our model. Feel free to make a copy and use it as a resource to help you create your own by inputting information that applies to your team!
+
+https://docs.google.com/document/d/1cwYcm0icD9uSpSI1TDkJf2n15XepVxPK/edit?usp=sharing&ouid=112991310670005816336&rtpof=true&sd=true
