--- a/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanIntro.mdx
+++ b/pages/PandC/ToolsAndResources/BusinessPlan/businessPlanIntro.mdx
@@ -1,1 +1,7 @@
-Nothing here yet... Coming Soon!
+# Business Plan:
+	Welcome to the Operations Manual section dedicated to Team 201’s Business Plan Model, where you can use this document to outline your team’s success at all aspects of team sustainability! Let’s dive in!
+
+# What is a Business Plan?
+	A Business Plan in FRC is a form of documentation outlining team sustainability in all aspects, including a team overview + sustainable team organization practices, financial sustainability, and even envionmental sustainability or growth of team culture. To the FEDS, our award-winning Business Plan not only helps us document all of our team’s efforts towards endurability, but it also serves as a way for us to identity strengths and risks and easily share these practices with others.
+
+	See our business plan model in the **Business Plan Example & Template** section.
