--- a/pages/PandC/ToolsAndResources/ImpactResources/AwardSubmission.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/AwardSubmission.mdx
@@ -1,1 +1,26 @@
-Nothing here yet... Coming Soon!
+# Impact Award Submission Process:
+Here you are, with your beautifully compiled Impact Award portfolio! Now there’s just one thing left to do: Submit your video and essays so they can be viewed by the judges. This page will serve as a walkthrough on the submission process.
+
+- Note that the only permitted team members for submitting your portfolio are the **Lead Mentors 1 & 2** and the **Student Submitter(s)**, which must be directly given access to the role on the firstinspires.org page by lead mentors. It is strongly encouraged by FIRST for students to submit for the award, with Lead Mentors being able to oversee the process and ensure it is completed smoothly, so I give that same advice as well.
+
+## 1. Go to “My Dashboard” on the Firstinspires.org website.
+Pretty straightforward, input your username as password to reach your dashboard on the FIRST website. This is where you will be able to submit your portfolio.
+
+## 2. Open the dropdown menu of your team, and open the “Certificates & Awards” dropdown. There you will see the option to submit for all of the specified awards; Click on the “FIRST Impact Award” option.
+
+## 3. Click the “View” button next to the “FIRST Impact Award” option.
+This page also shows the due date for the award submissions (For the 2025 year it’s Feb 13th, 2025) and its status whether it's incomplete, complete but not submitted, or submitted.
+
+## 4. Once you reach the STIMS page, scroll down to the bottom and click on the “Edit” button. That way you will be able to edit & add to the questions / essays.
+You won’t be able to (and shouldn’t be able to) submit your Impact portfolio without all of the required questions filled out, so make sure you triple check you have submitted everything you need to before submitting!
+
+## 5. Now you can put in your team’s responses to each of the questions! 
+Hopefully you took my previous advice of writing them beforehand, so all you will need to do is paste them into the webpage into their respective box. If not, then this is where you will put your team’s written responses to the essays.
+
+## 6. At the bottom is where you will see the area to paste in your Impact video link to be accessible by judges in order for it to be played at competitions if (and when!) your team wins the Impact Award (Again, I highly recommend having a video).
+
+## 7. Make sure to save your changes at the bottom and exit when finished.
+
+## 8. When you are all good to go, you can officially submit your portfolio at the bottom of the page!
+
+Hopefully you found this page helpful! Be sure to check out the other Impact-related pages if you haven’t done so already, and we’re more than happy to answer any questions you may have!
