--- a/pages/PandC/ToolsAndResources/ImpactResources/ImpactIntro.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/ImpactIntro.mdx
@@ -1,1 +1,26 @@
-Nothing here yet... Coming Soon!
+# What is the Impact Award?
+If you were looking to learn more about FIRST FRC’s Impact Award and how to effectively compete for it, you’re in the right place! Some of you may have some background knowledge of the award while some others may not, and either one is completely okay! This guide will walk you through every aspect of building a competitive portfolio for the award submission process, and later, at competitions.
+
+# Introduction on the Impact Award:
+	The FIRST Impact Award is the most prestigious award in all of FRC Robotics, on par with the FIRST Inspire Award in FTC. In simple terms, this award rewards the team that makes the most efforts in their community + beyond towards the FIRST Mission: To create and provide exciting STEM opportunities to aspiring kids of becoming STEM leaders. It was essentially designed and executed to not only recognize the teams that go above and beyond in serving STEM resources to their community but to foster the overlying theme of FRC in Gracious Professionalism and inspiring kids through science and technology as a whole. Pretty neat, right?
+
+	In order to compete for this award, teams must prepare a series of documents / tools to be included in their portfolio: 1.) 14 written paragraphs not exceeding 500 characters each (including spaces and punctuation), 2.) 1 long essay not exceeding 10,000 characters (It’s easier than you think, trust me!), 3.) a presentation slideshow and script, 4.) a video highlighting the team’s impact and main accomplishments (No longer than 3 minutes long; It’s optional but highly recommended!), and a recorded documentation of all of the team’s impact and initiatives (also optional but highly, highly recommended!!). This seems like a lot, but we will have documentation on each of these points and how to accomplish them.
+
+	I would say the Presentation is like the bread and butter of your portfolio. It lasts up to 7 minutes where up to 3 student presenters walk the judges through their team’s efforts in a prepared fashion. Following this period, the judges have up to 5 minutes to ask the presenters questions about their presentation, team, or anything of the sort (Under normal circumstances each team receives a 12 minutes time period for their presentation window; If your presentation is less than 7 minutes, then judges are allowed to extend their Q&A session beyond 5 minutes to fill the whole 12 minutes). For more guidelines and info on the other uncommon circumstances of the presentation, view the firstinspires.org webpage [here](https://www.firstinspires.org/resource-library/frc/submitted-awards).
+
+# What is the timeframe for what you can report on for the Impact Award?
+One crucial part of competing for this award to know is that a team’s impact is measured within the past 3 years as a timeframe, so you can’t report on anything before that (In some cases it is emphasized to describe your team’s efforts within the past 12 months, but that’s a later story in the Long Essay). This encourages teams to continue impacting their community and beyond in new, creative, and consistent ways.
+
+	I think that one of the main things you should avoid thinking is that the presentation itself is the most important of the list. It may seem the case as it is used directly at competitions, but there really is a deeper understanding behind it. Judges actively view the essays and documentation log, and often ask questions in the Q&A session to presenters entirely based on information in them (so it’s important for presenters to study up and read the essays as well!).
+
+With that, let’s dive right in! Here is a rundown of what is included in the upcoming pages related to the Impact Award:
+- Introduction & Walkthrough of the Short Essays (aka the Executive Summaries)
+- Introduction & Walkthrough of the Long Essay (aka the main Essay)
+- Impact Video Guide
+- Impact Presentation Guide
+- Impact Log Introduction & Walkthrough
+- Impact Award Submission Process
+
+> As a lead presenter since freshman year, I can confidently say that competing for this award not only brought many opportunities to me as a student on the team but immersed me into a whole new world of connections and people; But really, it isn’t entirely about the award itself, but the relationships you make along the way. You got this, I believe in you! - Casper
+
+Written as of 2025 REEFSCAPE
