--- a/pages/PandC/ToolsAndResources/ImpactResources/LogWalkthrough.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/LogWalkthrough.mdx
@@ -1,1 +1,28 @@
-Nothing here yet... Coming Soon!
+# Impact Log Walkthrough & Template
+	Here you will find everything you need to create an Impact Log (including a template provided below!). Let’s take a look!
+
+# Why is having an Impact Documentation Log important?
+	This is a crucial document to keep and consistently update, as you will be able to keep track of everything you do towards your Impact portfolio in an easy-to-find way. Also, you won’t have to worry about forgetting anything because it will all be right there in the documentation. The firstinspires.org website even states that it is highly recommended to include a documentation log in the resources you provide the judges on presentation-day, 
+
+## Documentation Log Ideas to Include:
+- Any Community Activities your team takes part in
+- Any school events your team participates in
+- All Feeder team registrations per year
+- Screenshots of emails, social media posts / dms, etc. as evidence for setting up an event / collaboration on a project
+- Pretty much anything that counts to making an impact through STEM / beyond!
+
+# Documentation Log Guidelines:
+	Use these pointers as basic guidelines for your Documentation Log:
+
+## 1. Organize your Log by year and into sections.
+	For organization purposes, it’s important to know what year / month each task was done, so it’s important to date what goes into the documentation log. If you split your presentation into sections based on what the subject is about (ex. The FEDS split their initiatives into Operation FIRST, Operation Outreach, Operation Global, and OPEX), it makes sense to keep it consistent and use those same sections in your log as well.
+
+## 2. Determine one of FIRST’s Official Impact Definitions to correspond with each log.
+	As shown on our Documentation Log template, it is important to show which of the official Impact definitions of FIRST go with each log; As long as you’re able to use one of these definitions (Which can be found from the FIRST website [here](https://www.firstinspires.org/sites/default/files/uploads/resource_library/frc/game-and-season-info/awards/first-impact-award-definitions.pdf)) and it fits with expanding the FIRST Mission and making an impact in your community / beyond, you shouldn’t have any problems including it in your log.
+
+## 3. Consistently update the log!
+One of the biggest things about the log is that you need to make sure that it is consistently updated! You might not always remember what you did at this hour 7 months ago, and the whole point of having a documentation log is to log your documents (Creative, right?).
+
+You can find our team's Documentation Log on our team website [here](https://feds201.com/).
+
+Hopefully you found this page helpful! Make sure to contact us with any questions and we will be happy to help you!
