--- a/pages/PandC/ToolsAndResources/ImpactResources/LongEssayHowTo.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/LongEssayHowTo.mdx
@@ -1,1 +1,44 @@
-Nothing here yet... Coming Soon!
+# Long Essay Full Walkthrough:
+	Welcome to the wonderful world of the Impact Award Long Essay! With 10,000 characters, you are assigned to describe your team’s efforts in more detail, touching on additional information, and give the judges the big and unique picture of your team. Let’s dive right in!
+
+# 2025 Updated Long Essay:
+See the 2025 guidelines of the Long Essay below (taken directly from the firstinspires.org website). Keep in mind that over the years the essay question may be slightly adjusted, so make sure to read the question carefully each year.
+
+> - The essay portion of the FIRST Impact Award submission provides teams an opportunity to describe their activities and achievements in narrative form. While Judges encourage creativity of expression, the essay must clearly deliver information and facts describing what the team is about. Teams are encouraged to use some of this space to explain how their team is structured and the number of mentors and students on the team.
+
+> - The essay should avoid merely duplicating information provided in the executive summary questions. However, it is appropriate for the essay to further expand on those responses and provide more in-depth discussion of notable team achievements.
+
+> - The most effective essays are characterized by an overview of team activities during the last 3 years, followed by in-depth discussion of notable activities during the most recent 12-18 months. Judges use the essay to get a big picture view of the team and to learn about achievements that may be unique and noteworthy. 
+
+Let’s analyze some of the biggest pointers that your team should follow when writing this essay:
+1. Similar to the Short Essays, try not to say the same thing over and over again. Especially since it's a singular essay, I wouldn’t repeat anything previously stated over again, but rather expand on it. Same with information directly from the Short Essays; Elaborate more on them and take advantage of the amount of characters you can use to really bring on the “narrative format”.
+
+2. In addition to talking about your team’s Impact initiatives, this is a good place to talk about your team’s structure, including # of students, mentors, alumni mentors, team subgroups, team mission & vision statements, etc.
+
+3. This is the notable point: Judges want to see the “big” picture of your team, which can additionally be effectively done by starting out in a 3-year reporting timeframe and narrowing down to what your team has accomplished in the past 12 months.
+
+# Writing Tips:
+	Here are some additional pointers for writing these responses in the most efficient and effective way as possible:
+
+## 1. Pay attention to the amount of characters you are using.
+Just like with the Short Essays, make sure that you are aware of how many characters you have at a time. You have much more space than before, so don’t just write the essay with only 2,000 or so characters. I want to challenge you to use 9,500+ characters in this essay (or as close to that as possible) to really show the judges the uniqueness of your team.
+
+## 2. Take advantage of the freedom of space that you’re given.
+	10,000 characters really is a lot, so make sure to use as many of them as possible. Given the space, there isn’t really a reason not to make use of all of it.
+
+## 3. Really describe your initiatives in more detail.
+This is kind of an extension of what I previously mentioned, but detail is key for the long essay. Talk more about what you wrote in the Short Essays, or even add on new ideas; You can even talk about those initiatives and how they came to be / developed. 
+
+## 4. Write and revise the essay in a group.
+Same with the short essays, writing the Long Essay in a group will be the most beneficial and will save you hours and hours of editing; Most of it might not always make sense to others. Bounce ideas off of each other, and use our team’s method of essay writing below if you get stuck.
+
+## 5. If stuck on a way to effectively write the essay, use the FEDS’ writing method.
+If you need help to write the essays in an efficient way, try using our writing method! Within our Impact subgroup, we work together to write the essays. In 10-15 minute intervals, we split up and have each person write a part of the essay. Following this period, we regroup and, all together, we look at each section we wrote individually, making edits and add-ons. This same method can be used for the Short Essays, and encourages focused and efficient work while having great results.
+
+See a breakdown of an example excerpt of a Long Essay below (Example from a past season):
+
+> Carrying out our commitment to sustain these programs and ensure FIRST access at all 20 schools in our district, 500+ students and many new mentors have joined the FIRST family this year. Our support includes grant facilitation, financial oversight, direct student-to-student mentoring, volunteer recruitment and training, meeting space coordination, the ordering and distribution of supplies, and hosting qualifiers and tournaments. Agents hosted our 5th annual FTC Qualifier at RHS with students taking on vital volunteering roles such as referees, inspectors, and scorekeepers. This event draws 150 volunteers and 600+ students. We hosted 500+ students for 4 FLL tournaments each year since 2021. Also, our district hosted its first FRC Regional Competition in 2022, which we plan to host again next year.
+
+As you can see, this team (Definitely not Team 201…😉) used their large character limit to their advantage; This whole excerpt is about the team’s feeder programs and events they host for them, which stands at 808 characters alone. Imagine how awesome this essay would look with all of the team’s other projects and initiatives in this much detail (Hint: This essay’s character count was a little over 9660 characters)!
+
+I hope you found this page helpful in your Impact Award journey! Let us know if you have any questions, and we’ll see you in the next one!
