--- a/pages/PandC/ToolsAndResources/ImpactResources/PresentationWalkthrough.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/PresentationWalkthrough.mdx
@@ -1,1 +1,36 @@
-Nothing here yet... Coming Soon!
+# Impact Presentation Walkthrough:
+Hello there and welcome to the page detailing how to make an effective Impact presentation! Let’s dive right in!
+
+# What is the Impact Presentation used for and when?
+	In order to compete for the Impact award, teams are tasked with creating a presentation in addition to compiling the rest of their Impact portfolio (the essays, video, etc). This presentation will be given by a maximum of 3 students on the team to a panel of 3-4 judges in a judging room at competitions. It has a maximum of 7 minutes in length, and is followed by a 5-minute session of Q&A between the judges and presenters where judges have the opportunity to ask questions to the presenters about anything to get more clarity / information on, which can be influenced by both the presentation and essays.
+
+	What we do on the FEDS (and I highly recommend any other team to do this as well) is to choose 3 lead presenters alongside 3 backup presenters early on in the season, either in December before winter break or right at the start of build season (or even the earlier than that the better) so that gives you enough time to be able to complete your other Impact work and still have plenty of time to practice. Note that presenters must fully memorize their lines, so **consistent practice is key.**
+
+# What platform should you use to make the presentation?
+	We use Powerpoint to make our presentation slides as that is what we’re familiar with and have always used, but I’ve also heard of teams that use other resources like Google Slides and others. You can really use any Slideshow method you want, or even make a poster board if that is what your team is interested, as long as you can directly access them at competitions and they can be viewed by judges (Also keep in mind that you don’t have direct access to Wi-Fi connections at competitions either). While each platform may have its own strengths, focus on what works best for you!
+
+# General Guidelines:
+	Here are some recommendations we have when creating the presentation that will hopefully be a great benefit to you:
+
+## 1. Be fun with it and have a general theme!
+This could (and would make sense to) be the same theme as your Impact Video if you chose to have one to keep consistency. Try to change it up each year and bring the judges not only a masterpiece of your team’s Impact but also an exciting theming!
+
+## 2. Split your information into distinct sections.
+You’ve probably noticed that your team’s Impact initiatives can (or already are) pretty organized into sections, such as outreach initiatives, global initiatives, projects involving FIRST programs, etc. Separating your projects into “buckets” will make it increasingly easier for your presentation to transition between ideas, and to have more cohesion and organization. It is also often in a good format that allows each presenter to present one of the sections.
+
+## 3. Use many images / visuals with captions to describe them and avoid filling the slides with text!
+One thing to avoid in the presentation is to have slides just full of text directly taken from the presentation script. Especially with the fast pacing it must be given the small time frame, judges will not have time to read all of what you’re putting on the slides. Showing images with captions will not only make it much easier to understand what you’re talking about, but it also displays the credibility of that specific event to judges as you show proof of its completion. Aim for a mix between bullet points describing the main ideas and pictures with captions for the most part!
+
+## 4. Draft a Presentation Script before you begin creating the slideshow.
+Having the script ready before making the slideshow is especially helpful as it gives you an idea of what you want to have included and when you want to include it. It also just makes logical sense in ideas that you can begin having your presenters practice their part as the slides are being developed, so by the time they’re done you can have effective script practice with the slides.
+
+## 5. Start by assigning each part of the script to a slide, and then begin creating them.
+	We’ve found that what is most beneficial to do is to make each slide an idea or two that relate to each other, with around 3-4 sentences carved out to be the sentences spoken on that specific slide
+
+## 6. Make sure you include the most recent and important work of your team.
+	Same with the Essays and Video, you are required to keep your report in a 3-year time frame. With this, double check to make sure that you are including all of the biggest accomplishments and Impact initiatives and try not to miss out on anything if possible. There may not be space for it in the script, but there will almost always be a possible way to add it to one of the slides.
+
+## 7. Practice, practice, practice!
+	Get a dedicated practice time to practice your lines alongside the slideshow throughout the weeks leading up to competition season; If you meet 4-6 days a week in build season, I would recommend carving at least ⅓ to ½ of the meeting with your presenter group & a mentor to have dedicated practice time of the presentation and Q&A. This way you will be as prepared as you can be for the real thing at competitions.
+
+Hopefully you found this helpful! Please feel free to reach out to us with any questions!
