--- a/pages/PandC/ToolsAndResources/ImpactResources/ShortEssayHowTo.mdx
+++ b/pages/PandC/ToolsAndResources/ImpactResources/ShortEssayHowTo.mdx
@@ -1,1 +1,75 @@
-Nothing here yet... Coming Soon!
+# Short Essays Full Walkthrough:
+Welcome to the page dedicated to the Short Essays of your Impact Portfolio, also known as the Executive Summaries! Through 13 primary responses, you are tasked with answering the question as best as possible while keeping your answer below 500 total characters. Ready to rise up to the challenge?
+
+# 2025 Updated Short Essays:
+	See the full list of short essays updated as of 2025 below (taken directly from the firstinspires.org website). Keep in mind that some essay questions may stay the same over a span of multiple years while others may be slightly adjusted or completely different.
+
+> 1. Describe the impact of the FIRST program on team participants within the last 3 years. Think about percentages of those graduating high school, attending college, in STEM careers, leadership skills, and serving as mentors/sponsors in FIRST programs.
+
+> 2. Describe your community along with its unique opportunities and circumstances. Think about your geographic region, diversity of town/school, language barriers, socioeconomic barriers, and cultural expectations.
+
+> 3. Describe the team’s methods, with emphasis on the past 3 years, for spreading the FIRST mission in ways that are effective, scalable, sustainable, and creative.
+
+> 4. Describe your team’s goals and the progress you have made towards them to fulfill FIRST’s Vision. 
+
+> 5. What impact has your team seen from your efforts described in the above question? How does your team measure impact? 
+
+> 6. Please provide specific examples of how your team and team members act as role models for the FIRST community with emphasis on the past 3 years. How do you share these best practices with other teams?
+
+> 7. Describe your team’s initiatives to Assist, Mentor, and/or Start other FIRST teams with emphasis on activities within the past 3 years. 
+
+> 8. What other initiatives have you created, grown, sustained, or participated in (FIRST or otherwise) to help inspire young people to be science and technology leaders and innovators? What outcomes have you seen from your efforts in the past 3 years? 
+
+> 9. Describe the partnerships and relationships that you've created with other organizations (teams, sponsors, educational institutions, government, philanthropic entities, etc.) and what you have accomplished together, with emphasis on the past 3 years. 
+
+> 10. Describe your team's efforts in the past 3 years to promote equity, diversity, and inclusion within your team, FIRST, and your communities. 
+
+> 11. Explain how you ensure your team and the initiatives you have created will be sustainable. 
+
+> 12. Highlight one area in which your team needs to improve and describe the steps actively being taken to make those improvements. 
+
+> 13. Briefly describe other matters of interest to the FIRST Judges, including items that may not fit into the above topics. The judges are interested in learning about aspects of your team that may be unique, particularly noteworthy or had a large impact.
+
+> 14. (OPTIONAL - limited to 250 characters including spaces and punctuation) Please use this space to ask 1 question to your FIRST Impact Award Judges which will be answered after each event with feedback from the judges. 
+
+**Recommendation:** Have a question brainstorm for each question before writing.
+	It is substantially helpful to take 10 minutes out of a meeting with the full team to go over one of the Short Essay questions beforehand, as by the time you begin writing you will have full access to a list of ideas that you can incorporate into your response from many different perspectives. Once you do this for all 13 of the main responses, then you’re going to be in a great position to start writing each one.
+
+# Writing Tips:
+	Here are some pointers for writing these responses in the most efficient and effective way as possible:
+
+## 1. Pay attention to the amount of characters you are using.
+500 characters may seem like a lot, but they can often be fully used up in 2-3 sentences. Make sure you are aware of how many characters you have at a time and eliminate what’s unnecessary.
+
+## 2. Get rid of all of the fluff! Only use sentences / words that are crucial to get the point across.
+Most times writers use transitions or other forms of “fluff” in their responses that adds character to their writing. Although I’m all for it most of the time, these essays don’t really have the space for those words / sentences when you could include more information and answer the question in more detail with those same characters. I provided an example below that shows this tip in effect.
+
+## 3. Answer the question as fully as possible!
+Especially for the questions with multiple parts, it is important to evaluate each part the question is asking to write the best possible response. Each part of a question is connected to each other in some way, so it can be easier to try to relate them to each other.
+
+## 4. Try not to re-use the same information more than twice in all of the 13 essays.
+If possible, try to limit the amount of times you say the same information in multiple essays; I’m specifically talking about specific explanations here. If for example your team has an initiative where you provide STEM trainings to students of all ages in your school district, you could talk about the amount of students trained in this way / total # of trainings in one essay, and the benefits / results of them on the community in another. Especially for teams that make a large impact and have many projects, it is important to limit the amount of times you say the same thing over again so you have sufficient space to include all of your other points.
+
+## 5. Make sure to use all 500 characters or as much as you possibly can!
+Just to put it out there, this will almost definitely not be an issue but try to keep your responses anywhere in the 480-500 character range to have the most effective responses. It is also important to look back at the essay to see if any phrases can be reworded to be more succinct, which will save characters as well.
+Make sure you are only reporting on projects your team has done within the past 3 years!
+I talked about this one a bit in the Introduction page, but it is especially important to cover topics that are within this timeframe; This is what judges will use to determine whether your team is worthy of being a top-contester for the award at competitions. Remember, the Impact Award is really about teams that show sustained efforts to make an impact through STEM, so consistency is key (as well as bringing on new initiatives over time). This is where a documentation log would come in handy (which I will talk more about later in the “Impact Log Walkthrough & Template” section), as you can keep a recorded document of everything you do and the date you completed it.
+
+## 6. Question # 14 tip: Ask a question to the judges specifically about your Impact Portfolio.
+For example, questions like, “Was there anything in our presentation that lacked clarity?”, “What was the most powerful part of the essays that stuck out to the judges”, etc. This is also recommended by FIRST for this question. Try to avoid asking judges a question about how to further advance one of your team’s initiatives, etc. as that is avoiding the main purpose of the question in the first place. Use it as an additional source of feedback for your presenters / team to help you for future competitions / years.
+
+## 7. Get feedback from the entire team (or as many team members as possible)!
+Like with all writing, it is important to bring many people into the fold as others may have a different insight on your work or even a different and more concise way of approaching a sentence. With group discussions, you will be sure to address each question confidently with all of the different ideas / insights your team has.
+
+For us on the FEDS, we host an annual Impact Retreat where we often go over our essay drafts together to foster positive feedback and efficient editing / communication. For other teams, you may just do it in your regular meetings, and that’s ok as well!
+
+See a breakdown of an example essay below (Example from a past season):
+
+> Question: Explain how you ensure your team and the initiatives you have created will continue to run effectively for the foreseeable future.
+
+> Response: To ensure team sustainability, we focus on relationships, planning, and continuous improvement. We use a sponsorship scouting system, host an annual sponsor retreat, conduct robust fundraising, and create a comprehensive business plan. We maintain long-standing connections to alum who often return as mentors. We support a plethora of K-8 teams to ensure an ongoing pipeline of new agents. Our advocacy informed our district's hiring of a CTE director who helps us support robotics districtwide.
+
+
+As you can see, this team (Definitely not Team 201…😉) was given the requirements of answering how their team’s projects would continue to be sustainable over time. First off, they give a general answer to the question in one short sentence to give a generalized overview of the points to come. They respond with each following sentence giving a new example of how their team worked to the goal outlined in the question; It’s directly answering the question in as many ways as possible, which is important to know in order to write the most effective essays. It’s noticeable how they use almost no transition phrases / words at all, which allows for more space to include even more answers. In the end, this response is 496 characters long, just below the 500 character maximum.
+
+I hope you found this page helpful in your Impact Award journey! Feel free to let us know if you have any questions, and we’ll see you in the next one!
